--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "yosef",
+   "name": "yosef",
   "version": "1.0.0",
-  "description": "",
+  "description": "A simple Node.js project",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": " node index.js",
-     "build": "npm run build",
+   "scripts": {
+    "start": "node index.js",
+    "build": "npm install"
   },
   "author": "",
   "license": "ISC",
